# m5-cardputer-adv

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PHASE-1-INTERFACES.md  PHASE-2-INTERFACES.md  PHASE-3-INTERFACES.md  PHASE-4-INTERFACES.md  PHASE-5-INTERFACES.md  README.md  ROADMAP.md  SECURITY.md
bridge/advdeck-agent-bridge/: README.md  pyproject.toml
bridge/advdeck-agent-bridge/fixtures/invalid/: README.md  calendar-bad-datetime.json  result-manifest-missing-artifacts.json  tasks-missing-status.json  tasks-unknown-status.json
bridge/advdeck-agent-bridge/schemas/: calendar-suggestions.schema.json  error-manifest.schema.json  ics-export.schema.json  pending-request.schema.json  recording-manifest.schema.json  tasks.schema.json
bridge/advdeck-agent-bridge/src/advdeck_bridge/: __init__.py  __main__.py  cli.py  export.py  ics_export.py  ids.py  nl_date.py  paths.py  queue.py  runner.py  validation.py
bridge/advdeck-agent-bridge/src/advdeck_bridge/providers/: __init__.py  dry_run.py  local_file.py  openai.py
bridge/advdeck-agent-bridge/templates/: README.md  agent-pack.md  agent-pack.md.j2  planning-prompt.md.j2
bridge/advdeck-agent-bridge/tests/: test_cli_calendar_export.py  test_cli_export.py  test_cli_plan.py  test_cli_run_once.py  test_cli_transcribe.py  test_cli_validate.py  test_e2e_bridge_to_firmware.py  test_e2e_voice_to_plan.py  test_ics_export.py  test_invalid_fixtures.py  test_local_file_provider.py  test_nl_date.py  test_openai_provider.py  test_providers.py  test_schemas.py  test_transcription_providers.py
(+130 files in other folders)
